--- a/public/style.css
+++ b/public/style.css
@@ -23,3 +23,13 @@ canvas {
   width: 100%;
   height: 100%;
 }
+
+.video-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.25;
+  background-color: black;
+}
